--- a/index.html
+++ b/index.html
@@ -3,8 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>John Wesley</title>
 </head>
+<title>
+    Wesley
+</title>
+<p>
+    This is my practice session in home
+</p>
 <body>
     <script src="script.js"></script>
 </body>
